# evm-rs

./: .gitignore  Cargo.toml  rust-toolchain.toml
core/: Cargo.toml
core/src/: memory.rs  opcode.rs
core/src/eval/: macros.rs  misc.rs  mod.rs
gasometer/: Cargo.toml
gasometer/src/: costs.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: handler.rs  lib.rs  tracing.rs
runtime/src/eval/: mod.rs  system.rs
src/backend/: memory.rs
src/executor/stack/: executor.rs  memory.rs  mod.rs  precompile.rs
