[package]
name = "evm-core"
version = "0.37.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>", "Parity Technologies <admin@parity.io>"]
description = "Portable Ethereum Virtual Machine implementation written in pure Rust."
repository = "https://github.com/sorpaas/rust-evm"
keywords = ["no_std", "ethereum"]
edition = "2018"

[dependencies]
primitive-types = { version = "0.9", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive", "full"], optional = true }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
hex = "0.4"

[features]
default = ["std"]
std = [
	"primitive-types/std",
	"serde/std",
	"scale-codec/std",
	"scale-info/std",
]
with-codec = [
	"scale-codec",
	"scale-info",
	"primitive-types/impl-codec",
]
with-serde = [
	"serde",
	"primitive-types/impl-serde",
]
